fix: remove scroll on the ham menu; removed color highlighting on mobile devices

--- a/src/App/components/Header/BurgerMenu/BurgerMenu.module.css
+++ b/src/App/components/Header/BurgerMenu/BurgerMenu.module.css
@@ -42,6 +42,7 @@
   font-weight: 600;
   color: #fff;
   text-decoration: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .link:hover {
